se fini wiwi porfin

--- a/src/language/eng.json
+++ b/src/language/eng.json
@@ -1,9 +1,11 @@
 {
     "Name": "Name",
+    "id":"ID",
     "Channel": "Channel",
     "Seasons": "Seasons",
     "Episodes": "Episodes",
     "Release": "Release",
     "Studio is busy!":"Studio is busy!",
-    "Error while loading image.":"Error while loading image."
+    "Error while loading image.":"Error while loading image.",
+    "TV Series":"TV Series"
 }
