--- a/src/language/esp.json
+++ b/src/language/esp.json
@@ -1,9 +1,12 @@
 {
     "Name": "Nombre",
+    "id":"ID",
     "Channel": "Canal",
     "Seasons": "Temporadas",
     "Episodes": "Episodios",
     "Release": "Lanzamiento",
     "Studio is busy!":"¡El estudio de produccion esta ocupado!",
-    "Error while loading image.":"Ha habido un error mientras cargamos su imagen."
+    "Error while loading image.":"Ha habido un error mientras cargamos su imagen.",
+    "TV Series":"Series de television"
+
 }
